--- a/packages/google_mobile_ads/example/android/settings.gradle
+++ b/packages/google_mobile_ads/example/android/settings.gradle
@@ -12,4 +12,6 @@ plugins.each { name, path ->
     def pluginDirectory = flutterProjectRoot.resolve(path).resolve('android').toFile()
     include ":$name"
     project(":$name").projectDir = pluginDirectory
+    include ":nativetemplates"
+    project(":nativetemplates").projectDir = flutterProjectRoot.resolve(path).resolve('android').resolve('nativetemplates').toFile()
 }
