Add native templates source

--- a/packages/google_mobile_ads/android/build.gradle
+++ b/packages/google_mobile_ads/android/build.gradle
@@ -39,6 +39,8 @@ android {
       testImplementation 'org.mockito:mockito-inline:3.9.0'
       testImplementation 'org.robolectric:robolectric:4.4'
       testImplementation 'androidx.test:core:1.3.0'
+      implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+
     }
   testOptions {
     unitTests {
