--- a/packages/google_mobile_ads/pubspec.yaml
+++ b/packages/google_mobile_ads/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   meta: ^1.0.4
   flutter:
     sdk: flutter
-  visibility_detector: ^0.3.3
+  visibility_detector: ^0.4.0+2
   webview_flutter_android: ^3.3.1
   webview_flutter_wkwebview: ^3.1.1
   webview_flutter: ^4.0.5
